prevent some columns from wrapping text

--- a/app/assets/stylesheets/views/circle/members/members_list.scss
+++ b/app/assets/stylesheets/views/circle/members/members_list.scss
@@ -17,4 +17,7 @@ section > .members_list {
     height: 30px;
     font-size: 1.5rem;
   }
+  td.no-wrap{
+    white-space: nowrap;
+  }
 }
